--- a/test.html
+++ b/test.html
@@ -10,8 +10,17 @@
         alert("test massage")
     }
     </script>
+    <script src="http://seoandji.dothome.co.kr/jq/jquery.js"></script>
+    <script>
+    $(function(){
+       $("#btn").click(function(){ 
+           alert("tttttt");
+       });
+    });
+    </script>
 </head>
 <body>
    <input type="button" value="클릭" onclick="abc();"> 
+   <input type="button" value="애니" id="btn"> 
 </body>
 </html>
