--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
         alert("test massage")
     }
     </script>
-    <script src="http://seoandji.dothome.co.kr/jq/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script>
     $(function(){
        $("#btn").click(function(){ 
